--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 		a:hover{color: yellow;}
 		a:visted{color: blue}
 		a:link{color: blue;}
+		a{text-decoration:none;
+		font-size:30px;}
 	</style>
 </head>
 <body>
