--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 			background-color: #bebef3;
 			font-size: 35px;
 		}
-		a:hover{color: yellow;}
-		a:visted{color: blue}
-		a:link{color: blue;}
+		a:hover{color: yellow;text-decoration:none;}
+		a:visted{color: blue;text-decoration:none;}
+		a:link{color: blue;text-decoration:none;}
 		a{text-decoration:none;
 		font-size:30px;}
 	</style>
