--- a/buying form.html
+++ b/buying form.html
@@ -2,6 +2,15 @@
 <html>
 <head>
 	<title></title>
+<style>
+	body{background-color: #B19CD9;
+	}
+	input{ background-color:grey;
+		padding:10px;
+		border-radius:5px;
+	}
+	</style>
+		
 </head>
 <body>
 	<form align="center" action="buying form2.html">
