--- a/buying form.html
+++ b/buying form.html
@@ -5,9 +5,10 @@
 <style>
 	body{background-color: #B19CD9;
 	}
-	input{ background-color:grey;
-		padding:10px;
-		border-radius:5px;
+	input{ background-color:lightgrey;
+		padding:20px;
+		border-radius:10px;
+		color:blue;
 	}
 	</style>
 		
