--- a/buying form2.html
+++ b/buying form2.html
@@ -2,6 +2,17 @@
 <html>
 <head>
 	<title></title>
+	<style>
+	body{background-color: #B19CD9;
+	}
+	input{ background-color:lightgrey;
+		padding:20px;
+		border-radius:10px;
+		color:blue;
+	}
+	input:focus{background-color:yellow;}
+	</style>
+		
 </head>
 <body>
 	<form align="center" action >
